force-app/main/default/objects/cel_Transaction__c/fields/cel_AccountId__c.field-meta.xml
<CustomField>
    <fullName>cel_AccountId__c</fullName>
    <label>Customer Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Master, Slave</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions (Customer)</relationshipLabel>
    <relationshipName>Transactions1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>