force-app/main/default/objects/cel_Transaction__c/fields/cel_customer_local_type__c.field-meta.xml
<CustomField>
    <fullName>cel_customer_local_type__c</fullName>
    <label>customer local type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>