force-app/main/default/objects/cel_Transaction__c/fields/cel_invoice_Num__c.field-meta.xml
<CustomField>
    <fullName>cel_invoice_Num__c</fullName>
    <label>Invoice Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>