force-app/main/default/objects/cel_Transaction__c/fields/cel_invoice_sid__c.field-meta.xml
<CustomField>
    <fullName>cel_invoice_sid__c</fullName>
    <externalId>true</externalId>
    <label>Invoice SID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>