force-app/main/default/objects/cel_Transaction__c/fields/cel_invoice_type__c.field-meta.xml
<CustomField>
    <fullName>cel_invoice_type__c</fullName>
    <label>InvoiceType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>