force-app/main/default/objects/cel_Transaction__c/fields/cel_is_cancelled__c.field-meta.xml
<CustomField>
    <fullName>cel_is_cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>