force-app/main/default/objects/cel_Transaction__c/fields/cel_is_first_transaction__c.field-meta.xml
<CustomField>
    <fullName>cel_is_first_transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is first transaction</label>
    <type>Checkbox</type>
</CustomField>