force-app/main/default/objects/cel_Transaction__c/fields/cel_locale_currency__c.field-meta.xml
<CustomField>
    <fullName>cel_locale_currency__c</fullName>
    <label>Locale Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>