force-app/main/default/objects/cel_Transaction__c/fields/cel_sale_date__c.field-meta.xml
<CustomField>
    <fullName>cel_sale_date__c</fullName>
    <label>Sale date</label>
    <type>Date</type>
</CustomField>