force-app/main/default/objects/cel_Transaction__c/fields/cel_store__c.field-meta.xml
<CustomField>
    <fullName>cel_store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Store</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions (Store Code)</relationshipLabel>
    <relationshipName>Transactions2</relationshipName>
    <type>Lookup</type>
</CustomField>