force-app/main/default/objects/cel_Transaction__c/fields/cel_Store_Region__c.field-meta.xml
<CustomField>
    <fullName>cel_Store_Region__c</fullName>
    <label>Store Region Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>