force-app/main/default/objects/cel_Transaction__c/fields/cel_Total_Net_Value_Local_Tax_Inc_Cur__c.field-meta.xml
<CustomField>
    <fullName>cel_Total_Net_Value_Local_Tax_Inc_Cur__c</fullName>
    <formula>IF( 
FIND(&quot;.&quot;,TEXT(cel_total_NVLTIC__c))=0, 
cel_locale_currency__c + &#39; &#39; + TEXT(cel_total_NVLTIC__c)+&quot;,00&quot;, 
IF ( 
LEN(TEXT(cel_total_NVLTIC__c))-FIND(&quot;.&quot;,TEXT(cel_total_NVLTIC__c))=1, 
cel_locale_currency__c + &#39; &#39; + TEXT(cel_total_NVLTIC__c)+&quot;0&quot;,	
IF ( 
FIND(&quot;.&quot;,TEXT(cel_total_NVLTIC__c))&gt;0, 
cel_locale_currency__c + &#39; &#39; + SUBSTITUTE(TEXT(cel_total_NVLTIC__c), &#39;.&#39;, &#39;,&#39;),	
cel_locale_currency__c + &#39; &#39; + TEXT(cel_total_NVLTIC__c)) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net Value Local Tax Inc Cur</label>
    <type>Text</type>
</CustomField>