force-app/main/default/objects/cel_Transaction__c/fields/cel_Total_Net_Value_local_Wo_tax_EUR__c.field-meta.xml
<CustomField>
    <fullName>cel_Total_Net_Value_local_Wo_tax_EUR__c</fullName>
    <label>Total Net Value local Wo tax EUR</label>
    <summarizedField>cel_Transaction_Line__c.cel_net_value_local_wo_tax_eur__c</summarizedField>
    <summaryForeignKey>cel_Transaction_Line__c.cel_transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>