force-app/main/default/objects/cel_Transaction__c/fields/cel_total_NVLTIC__c.field-meta.xml
<CustomField>
    <fullName>cel_total_NVLTIC__c</fullName>
    <label>Total NVLTIC</label>
    <summarizedField>cel_Transaction_Line__c.cel_net_value_local_tax_inc_cur__c</summarizedField>
    <summaryForeignKey>cel_Transaction_Line__c.cel_transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>