force-app/main/default/objects/cel_Transaction__c/fields/cel_total_NVLWTC__c.field-meta.xml
<CustomField>
    <fullName>cel_total_NVLWTC__c</fullName>
    <label>Total NVLWTC</label>
    <summarizedField>cel_Transaction_Line__c.cel_value_local_wo_tax_cur__c</summarizedField>
    <summaryForeignKey>cel_Transaction_Line__c.cel_transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>