force-app/main/default/objects/cel_Transaction__c/fields/cel_Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cel_Total_Quantity__c</fullName>
    <label>Total Quantity</label>
    <summarizedField>cel_Transaction_Line__c.cel_Quantity__c</summarizedField>
    <summaryForeignKey>cel_Transaction_Line__c.cel_transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>