force-app/main/default/objects/cel_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>cel_invoice_sid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>